// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FilterAndOrder should render 1`] = `
<body
  class="dxp"
>
  <div>
    <div
      class="dropdown dropdown-root mr-2"
    >
      <button
        aria-controls="clay-dropdown-menu-1"
        aria-expanded="false"
        aria-haspopup="true"
        class="dropdown-toggle btn btn-outline-borderless btn-sm btn-outline-secondary"
        data-testid="filter-button"
        type="button"
      >
        <span
          class="caret-root"
        >
          <svg
            class="lexicon-icon lexicon-icon-filter"
            role="presentation"
          >
            <use
              href="#filter"
            />
          </svg>
        </span>
        <span
          class="mx-2"
        >
          Filter
        </span>
        <span
          class="caret-root"
        >
          <svg
            class="lexicon-icon lexicon-icon-caret-bottom"
            role="presentation"
          >
            <use
              href="#caret-bottom"
            />
          </svg>
        </span>
      </button>
    </div>
  </div>
  <div>
    <div>
      <div
        aria-hidden="true"
        class="dropdown-menu"
        id="clay-dropdown-menu-1"
        role="presentation"
      >
        <li
          aria-hidden="true"
          class="dropdown-subheader"
          id="clay-dropdown-menu-group-1"
          role="presentation"
        >
          Filter By
        </li>
        <li
          role="presentation"
        >
          <ul
            aria-labelledby="clay-dropdown-menu-group-1"
            class="list-unstyled"
            role="group"
          >
            <div
              class="dropdown"
            >
              <li
                role="presentation"
              >
                <button
                  aria-controls="clay-dropdown-menu-2"
                  aria-expanded="false"
                  aria-haspopup="true"
                  class="dropdown-item dropdown-toggle d-flex justify-content-between align-items-center w-100"
                  role="menuitem"
                  tabindex="-1"
                >
                  <span
                    class="text-truncate"
                  >
                    status
                  </span>
                  <span
                    class="caret-root"
                  >
                    <svg
                      class="lexicon-icon lexicon-icon-caret-right"
                      role="presentation"
                    >
                      <use
                        href="#caret-right"
                      />
                    </svg>
                  </span>
                </button>
              </li>
            </div>
          </ul>
        </li>
      </div>
      <div>
        <div>
          <div
            aria-hidden="true"
            class="dropdown-menu"
            id="clay-dropdown-menu-2"
            role="presentation"
          >
            <li
              aria-selected="false"
              role="presentation"
            >
              <span
                class="dropdown-item"
                role="menuitem"
                tabindex="-1"
              >
                <div
                  class="custom-control custom-checkbox custom-control-outside"
                >
                  <label>
                    <input
                      class="custom-control-input"
                      type="checkbox"
                      value="done"
                    />
                    <span
                      class="custom-control-label"
                    >
                      <span
                        class="custom-control-label-text"
                      >
                        done
                      </span>
                    </span>
                  </label>
                </div>
              </span>
            </li>
            <li
              aria-selected="false"
              role="presentation"
            >
              <span
                class="dropdown-item"
                role="menuitem"
                tabindex="-1"
              >
                <div
                  class="custom-control custom-checkbox custom-control-outside"
                >
                  <label>
                    <input
                      class="custom-control-input"
                      type="checkbox"
                      value="running"
                    />
                    <span
                      class="custom-control-label"
                    >
                      <span
                        class="custom-control-label-text"
                      >
                        running
                      </span>
                    </span>
                  </label>
                </div>
              </span>
            </li>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`FilterAndOrder should render filters as a flat list 1`] = `
<body
  class="dxp"
>
  <div>
    <div
      class="dropdown dropdown-root mr-2"
    >
      <button
        aria-controls="clay-dropdown-menu-12"
        aria-expanded="true"
        aria-haspopup="true"
        class="dropdown-toggle btn btn-outline-borderless btn-sm btn-outline-secondary"
        data-testid="filter-button"
        style=""
        type="button"
      >
        <span
          class="caret-root"
        >
          <svg
            class="lexicon-icon lexicon-icon-filter"
            role="presentation"
          >
            <use
              href="#filter"
            />
          </svg>
        </span>
        <span
          class="mx-2"
        >
          Filter
        </span>
        <span
          class="caret-root"
        >
          <svg
            class="lexicon-icon lexicon-icon-caret-bottom"
            role="presentation"
          >
            <use
              href="#caret-bottom"
            />
          </svg>
        </span>
      </button>
    </div>
  </div>
  <div>
    <div>
      <div
        class="dropdown-menu show"
        id="clay-dropdown-menu-12"
        role="presentation"
        style="left: -999px; top: -995px;"
      >
        <li
          aria-hidden="true"
          class="dropdown-subheader"
          id="clay-dropdown-menu-group-8"
          role="presentation"
        >
          Filter By status
        </li>
        <li
          role="presentation"
        >
          <ul
            aria-labelledby="clay-dropdown-menu-group-8"
            class="list-unstyled"
            role="group"
          >
            <li
              aria-selected="false"
              role="presentation"
            >
              <span
                class="dropdown-item"
                role="menuitem"
                tabindex="-1"
              >
                <div
                  class="custom-control custom-checkbox custom-control-outside"
                >
                  <label>
                    <input
                      class="custom-control-input"
                      type="checkbox"
                      value="done"
                    />
                    <span
                      class="custom-control-label"
                    >
                      <span
                        class="custom-control-label-text"
                      >
                        done
                      </span>
                    </span>
                  </label>
                </div>
              </span>
            </li>
            <li
              aria-selected="false"
              role="presentation"
            >
              <span
                class="dropdown-item"
                role="menuitem"
                tabindex="-1"
              >
                <div
                  class="custom-control custom-checkbox custom-control-outside"
                >
                  <label>
                    <input
                      class="custom-control-input"
                      type="checkbox"
                      value="running"
                    />
                    <span
                      class="custom-control-label"
                    >
                      <span
                        class="custom-control-label-text"
                      >
                        running
                      </span>
                    </span>
                  </label>
                </div>
              </span>
            </li>
          </ul>
        </li>
      </div>
    </div>
  </div>
</body>
`;

exports[`FilterAndOrder should render with filter by options 1`] = `
<body
  class="dxp"
>
  <div>
    <div
      class="dropdown dropdown-root mr-2"
    >
      <button
        aria-controls="clay-dropdown-menu-3"
        aria-expanded="true"
        aria-haspopup="true"
        class="dropdown-toggle btn btn-outline-borderless btn-sm btn-outline-secondary"
        data-testid="filter-button"
        style=""
        type="button"
      >
        <span
          class="caret-root"
        >
          <svg
            class="lexicon-icon lexicon-icon-filter"
            role="presentation"
          >
            <use
              href="#filter"
            />
          </svg>
        </span>
        <span
          class="mx-2"
        >
          Filter
        </span>
        <span
          class="caret-root"
        >
          <svg
            class="lexicon-icon lexicon-icon-caret-bottom"
            role="presentation"
          >
            <use
              href="#caret-bottom"
            />
          </svg>
        </span>
      </button>
    </div>
  </div>
  <div>
    <div>
      <div
        class="dropdown-menu show"
        id="clay-dropdown-menu-3"
        role="presentation"
        style="left: -999px; top: -995px;"
      >
        <li
          aria-hidden="true"
          class="dropdown-subheader"
          id="clay-dropdown-menu-group-2"
          role="presentation"
        >
          Filter By
        </li>
        <li
          role="presentation"
        >
          <ul
            aria-labelledby="clay-dropdown-menu-group-2"
            class="list-unstyled"
            role="group"
          >
            <div
              class="dropdown"
            >
              <li
                role="presentation"
              >
                <button
                  aria-controls="clay-dropdown-menu-4"
                  aria-expanded="false"
                  aria-haspopup="true"
                  class="dropdown-item dropdown-toggle d-flex justify-content-between align-items-center w-100"
                  role="menuitem"
                  tabindex="-1"
                >
                  <span
                    class="text-truncate"
                  >
                    status
                  </span>
                  <span
                    class="caret-root"
                  >
                    <svg
                      class="lexicon-icon lexicon-icon-caret-right"
                      role="presentation"
                    >
                      <use
                        href="#caret-right"
                      />
                    </svg>
                  </span>
                </button>
              </li>
            </div>
          </ul>
        </li>
      </div>
      <div
        aria-hidden="true"
        data-aria-hidden="true"
      >
        <div>
          <div
            aria-hidden="true"
            class="dropdown-menu"
            id="clay-dropdown-menu-4"
            role="presentation"
          >
            <li
              aria-selected="false"
              role="presentation"
            >
              <span
                class="dropdown-item"
                role="menuitem"
                tabindex="-1"
              >
                <div
                  class="custom-control custom-checkbox custom-control-outside"
                >
                  <label>
                    <input
                      class="custom-control-input"
                      type="checkbox"
                      value="done"
                    />
                    <span
                      class="custom-control-label"
                    >
                      <span
                        class="custom-control-label-text"
                      >
                        done
                      </span>
                    </span>
                  </label>
                </div>
              </span>
            </li>
            <li
              aria-selected="false"
              role="presentation"
            >
              <span
                class="dropdown-item"
                role="menuitem"
                tabindex="-1"
              >
                <div
                  class="custom-control custom-checkbox custom-control-outside"
                >
                  <label>
                    <input
                      class="custom-control-input"
                      type="checkbox"
                      value="running"
                    />
                    <span
                      class="custom-control-label"
                    >
                      <span
                        class="custom-control-label-text"
                      >
                        running
                      </span>
                    </span>
                  </label>
                </div>
              </span>
            </li>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`FilterAndOrder should render with order by options 1`] = `
<body
  class="dxp"
>
  <div>
    <div
      class="dropdown dropdown-root"
    >
      <button
        aria-controls="clay-dropdown-menu-5"
        aria-expanded="true"
        aria-haspopup="true"
        class="dropdown-toggle btn btn-outline-borderless btn-sm btn-outline-secondary"
        data-testid="order-button"
        style=""
        type="button"
      >
        <span
          class="caret-root"
        >
          <svg
            class="lexicon-icon lexicon-icon-order-list-down"
            role="presentation"
          >
            <use
              href="#order-list-down"
            />
          </svg>
        </span>
        <span
          class="mx-2"
        >
          Order
        </span>
        <span
          class="caret-root"
        >
          <svg
            class="lexicon-icon lexicon-icon-caret-bottom"
            role="presentation"
          >
            <use
              href="#caret-bottom"
            />
          </svg>
        </span>
      </button>
    </div>
  </div>
  <div>
    <div>
      <div
        class="dropdown-menu show"
        id="clay-dropdown-menu-5"
        role="presentation"
        style="left: -999px; top: -995px;"
      >
        <ul
          class="list-unstyled"
          role="menu"
        >
          <li
            aria-hidden="true"
            class="dropdown-subheader"
            id="clay-dropdown-menu-group-3"
            role="presentation"
          >
            Order By
          </li>
          <li
            role="presentation"
          >
            <ul
              aria-labelledby="clay-dropdown-menu-group-3"
              class="list-unstyled"
              role="group"
            >
              <li
                aria-selected="false"
                role="presentation"
              >
                <span
                  class="dropdown-item"
                  role="menuitem"
                  tabindex="-1"
                >
                  <div
                    class="custom-control custom-radio custom-control-outside"
                  >
                    <label>
                      <input
                        class="custom-control-input"
                        name="filterAndOrder1"
                        role="radio"
                        type="radio"
                        value="name"
                      />
                      <span
                        class="custom-control-label"
                      >
                        <span
                          class="custom-control-label-text"
                        >
                          name
                        </span>
                      </span>
                    </label>
                  </div>
                </span>
              </li>
            </ul>
          </li>
        </ul>
      </div>
    </div>
  </div>
</body>
`;

exports[`FilterAndOrder should render with order by options and filter by options 1`] = `
<body
  class="dxp"
>
  <div>
    <div
      class="dropdown dropdown-root mr-2"
    >
      <button
        aria-controls="clay-dropdown-menu-6"
        aria-expanded="true"
        aria-haspopup="true"
        class="dropdown-toggle btn btn-outline-borderless btn-sm btn-outline-secondary"
        data-testid="filter-button"
        style=""
        type="button"
      >
        <span
          class="caret-root"
        >
          <svg
            class="lexicon-icon lexicon-icon-filter"
            role="presentation"
          >
            <use
              href="#filter"
            />
          </svg>
        </span>
        <span
          class="mx-2"
        >
          Filter
        </span>
        <span
          class="caret-root"
        >
          <svg
            class="lexicon-icon lexicon-icon-caret-bottom"
            role="presentation"
          >
            <use
              href="#caret-bottom"
            />
          </svg>
        </span>
      </button>
    </div>
    <div
      aria-hidden="true"
      class="dropdown dropdown-root"
      data-aria-hidden="true"
    >
      <button
        aria-controls="clay-dropdown-menu-8"
        aria-expanded="false"
        aria-haspopup="true"
        class="dropdown-toggle btn btn-outline-borderless btn-sm btn-outline-secondary"
        data-testid="order-button"
        type="button"
      >
        <span
          class="caret-root"
        >
          <svg
            class="lexicon-icon lexicon-icon-order-list-down"
            role="presentation"
          >
            <use
              href="#order-list-down"
            />
          </svg>
        </span>
        <span
          class="mx-2"
        >
          Order
        </span>
        <span
          class="caret-root"
        >
          <svg
            class="lexicon-icon lexicon-icon-caret-bottom"
            role="presentation"
          >
            <use
              href="#caret-bottom"
            />
          </svg>
        </span>
      </button>
    </div>
  </div>
  <div>
    <div>
      <div
        class="dropdown-menu show"
        id="clay-dropdown-menu-6"
        role="presentation"
        style="left: -999px; top: -995px;"
      >
        <li
          aria-hidden="true"
          class="dropdown-subheader"
          id="clay-dropdown-menu-group-4"
          role="presentation"
        >
          Filter By
        </li>
        <li
          role="presentation"
        >
          <ul
            aria-labelledby="clay-dropdown-menu-group-4"
            class="list-unstyled"
            role="group"
          >
            <div
              class="dropdown"
            >
              <li
                role="presentation"
              >
                <button
                  aria-controls="clay-dropdown-menu-7"
                  aria-expanded="false"
                  aria-haspopup="true"
                  class="dropdown-item dropdown-toggle d-flex justify-content-between align-items-center w-100"
                  role="menuitem"
                  tabindex="-1"
                >
                  <span
                    class="text-truncate"
                  >
                    status
                  </span>
                  <span
                    class="caret-root"
                  >
                    <svg
                      class="lexicon-icon lexicon-icon-caret-right"
                      role="presentation"
                    >
                      <use
                        href="#caret-right"
                      />
                    </svg>
                  </span>
                </button>
              </li>
            </div>
          </ul>
        </li>
      </div>
      <div
        aria-hidden="true"
        data-aria-hidden="true"
      >
        <div>
          <div
            aria-hidden="true"
            class="dropdown-menu"
            id="clay-dropdown-menu-7"
            role="presentation"
          >
            <li
              aria-selected="false"
              role="presentation"
            >
              <span
                class="dropdown-item"
                role="menuitem"
                tabindex="-1"
              >
                <div
                  class="custom-control custom-checkbox custom-control-outside"
                >
                  <label>
                    <input
                      class="custom-control-input"
                      type="checkbox"
                      value="done"
                    />
                    <span
                      class="custom-control-label"
                    >
                      <span
                        class="custom-control-label-text"
                      >
                        done
                      </span>
                    </span>
                  </label>
                </div>
              </span>
            </li>
            <li
              aria-selected="false"
              role="presentation"
            >
              <span
                class="dropdown-item"
                role="menuitem"
                tabindex="-1"
              >
                <div
                  class="custom-control custom-checkbox custom-control-outside"
                >
                  <label>
                    <input
                      class="custom-control-input"
                      type="checkbox"
                      value="running"
                    />
                    <span
                      class="custom-control-label"
                    >
                      <span
                        class="custom-control-label-text"
                      >
                        running
                      </span>
                    </span>
                  </label>
                </div>
              </span>
            </li>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    aria-hidden="true"
    data-aria-hidden="true"
  >
    <div>
      <div
        aria-hidden="true"
        class="dropdown-menu"
        id="clay-dropdown-menu-8"
        role="presentation"
      >
        <ul
          class="list-unstyled"
          role="menu"
        >
          <li
            aria-hidden="true"
            class="dropdown-subheader"
            id="clay-dropdown-menu-group-5"
            role="presentation"
          >
            Order By
          </li>
          <li
            role="presentation"
          >
            <ul
              aria-labelledby="clay-dropdown-menu-group-5"
              class="list-unstyled"
              role="group"
            >
              <li
                aria-selected="false"
                role="presentation"
              >
                <span
                  class="dropdown-item"
                  role="menuitem"
                  tabindex="-1"
                >
                  <div
                    class="custom-control custom-radio custom-control-outside"
                  >
                    <label>
                      <input
                        class="custom-control-input"
                        name="filterAndOrder2"
                        role="radio"
                        type="radio"
                        value="name"
                      />
                      <span
                        class="custom-control-label"
                      >
                        <span
                          class="custom-control-label-text"
                        >
                          name
                        </span>
                      </span>
                    </label>
                  </div>
                </span>
              </li>
            </ul>
          </li>
        </ul>
      </div>
    </div>
  </div>
</body>
`;
